In Progress: saving to try rebass

--- a/public/style.css
+++ b/public/style.css
@@ -20,3 +20,16 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+#navdiv {
+  display: flex;
+  justify-content: center;
+}
+
+#navimg {
+  flex-grow: 1;
+}
+
+#navlogo {
+  flex-grow: 1;
+}
