--- a/public/style.css
+++ b/public/style.css
@@ -39,3 +39,15 @@ form div {
 #navlogo {
   flex-grow: 1;
 }
+
+h1 {
+  color: aliceblue;
+}
+
+h2 {
+  color: aliceblue;
+}
+
+h3 {
+  color: aliceblue;
+}
